Fixed CMake-build; Update dist.info to support LPeg >= 0.10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ include ( dist.cmake )
 install_lua_module ( leg src/init.lua )
 install_lua_module ( leg.grammar src/grammar.lua )
 install_lua_module ( leg.parser src/parser.lua )
-install_lua_module ( leg.parser src/scanner.lua )
+install_lua_module ( leg.scanner src/scanner.lua )
 install_data ( README COPYRIGHT release )
 install_doc ( doc/ )
 install_test ( tests/ )
