cmake: update scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (C) 2007-2011 LuaDist.
+# Copyright (C) 2007-2013 LuaDist.
 # Created by Peter Drahoš
 # Redistribution and use of this file is allowed according to the terms of the MIT license.
 # For details see the COPYRIGHT file distributed with LuaDist.
@@ -6,7 +6,8 @@
 
 project ( leg NONE )
 cmake_minimum_required ( VERSION 2.6 )
-include ( dist.cmake )
+include ( cmake/dist.cmake )
+include ( lua )
 
 install_lua_module ( leg src/init.lua )
 install_lua_module ( leg.grammar src/grammar.lua )
@@ -16,4 +17,4 @@ install_doc ( doc/ )
 install_test ( tests/ )
 install_example ( examples/ )
 
-#FIX: paths: add_lua_test ( tests/test.lua )
+add_lua_test ( tests/test.lua WORKING_DIRECTORY tests )
